# agent-airlock

./: .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CLAUDE_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PROJECT_SYNTHESIS.md  DEEP_ANALYSIS.md  ECOSYSTEM_STATE_2026-04.md  LAUNCH_PLAYBOOK_2026.md  Makefile  PRODUCTION_READINESS_PLAN.md  PRODUCTION_ROADMAP.md  README.md  ROADMAP_2026.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/plans/: v0.4.0-enterprise-plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  cve_rule_request.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  bench_airlock.py  benchmark_airlock.py  benchmark_sanitizer.py
benchmarks/agentdojo/: RESULTS.md  __init__.py  run.py
benchmarks/blockrate/: RESULTS.md  __init__.py  __main__.py  corpus.py  report.py  runner.py
benchmarks/scantools_mcptox/: README.md  RESULTS.md  __init__.py  __main__.py  corpus.py  report.py  runner.py
benchmarks/toolprivbench/: README.md  RESULTS.md  __init__.py  __main__.py  harness.py  opur.py  report.py  scenarios.py
benchmarks/vs_gateway/: RESULTS.md  __init__.py  __main__.py  airlock_runner.py  corpus.py  gateway_measurement.json  report.py
docs/: COMPATIBILITY.md  DISTRIBUTION.md  SECURITY.md  changelog.md  index.md  research-log.md  scan-tools.md
docs/api/: airlock.md  config.md  mcp.md  policy.md  sandbox.md  sanitizer.md
docs/attest/: layer-contract.md
docs/benchmarks/: mcp-gateway-payload-gap.md  vs-native-mcp-gateway.md
docs/budget/: agent-sdk-credit.md
docs/cli/: egress-bench.md
docs/compliance/: EU-AI-ACT-ART12.md
docs/cves/: cve-2026-23744.md  cve-2026-30615.md  cve-2026-39884.md  cve-2026-6980.md  index.md
docs/distribution/: README-WEDGE.md  awesome-agent-security.md  awesome-llm-security.md  awesome-mcp-security.md  awesome-mcp-servers.md
docs/examples/: basic.md  pii.md  policy.md  sandbox.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: concepts.md  mcp.md  policy.md  sandbox.md  sanitization.md  validation.md
docs/integrations/: anthropic-claude-agent-sdk.md  crewai.md  managed-agents.md  pydantic-ai.md
docs/launch/: 2026-07-mcp-gateway-post.md  announcement.md  distribution-submissions.md  faq.md  index.md  nvd-mcp-watcher.yml.sample  readiness-checklist.md  rollback.md  show-hn-tool-call-validation.md
docs/mcp/: manifest-only-mode.md
docs/observability/: semconv.md
docs/plans/: 2026-04-21-v0.5.3-design.md
docs/policies/: eval-rce-cve-2026-44717.md  human-oversight-decorator.md  managed-agents-outcomes-2026-05-06.md  mcp-inspector-exposure-guard.md  mcp-stdio-command-injection-guard.md  metis-inspired-corpus-block-rate.md  npm-oidc-publish-window-guard.md  openapi-drift-guard.md  semantic-kernel-filter-eval-rce.md  stainless-provenance-probe.md
docs/presets/: high-value-actions.md  offensive-cyber-model-tier.md  ox-mcp-supply-chain-2026-04.md  yaml-format.md
docs/regulatory/: nist-ai-rmf-v2-comment-2026.md
docs/sandbox/: docker.md
docs/security/: check-changelog-ci.yml.sample  ci-coverage-floor.yml.sample  egress-bench-ci.yml.sample  egress-bench.md  owasp-coverage-gate-ci.yml.sample  perf-gate-ci.yml.sample  stdio-taint-scan-ci.yml.sample  stdio-taint-scan.md
examples/: README.md  anthropic_integration.py  async_tools.py  autogen_integration.py  basic_usage.py  conversation_tracking.py  crewai_integration.py  e2b_sandbox.py  error_hooks.py  fastmcp_integration.py  langchain_integration.py  langgraph_integration.py  llamaindex_integration.py  model_tier_budget.py  openai_agents_sdk_integration.py  policy_example.py  pydanticai_integration.py  smolagents_integration.py  streaming.py  workspace_pii.py
presets/: ox-mcp-2026-04.yaml
releases/: v0.5.6.md  v0.5.7.md
schemas/: preset_v1.json
scripts/: check_changelog.py  egress_bench.py  gen_cve_catalog.py  generate_benchmark.py  smoke_action_contradiction_gate.py  smoke_attested_admission.py  smoke_capsule_indirect_injection.py  smoke_explain.py  smoke_flowise_mcp_stdio.py  smoke_sequence_guard.py  update_test_badge.py  verify_corpus_manifest.py
security-scan/: plan.md  state.json
src/agent_airlock/: __init__.py  a2a.py  action_contradiction_gate.py  anomaly.py  audit.py  audit_otel.py  camouflage_resistant.py  capabilities.py  circuit_breaker.py  config.py  context.py  conversation.py  core.py  cost_tracking.py  done_receipt_guard.py  exceptions.py  filesystem.py  honeypot.py  identity.py  mcp.py  mcp_proxy_guard.py  negotiation_bench.py  network.py  observability.py  oversight.py  policy.py  policy_presets.py  preset_loader.py  redis_rate_limit.py  regression_corpus.py  retry.py  safe_types.py  sandbox.py  sandbox_backend.py  sanitizer.py  sdk_provenance.py  self_heal.py  sequence_guard.py  ssrf_egress_guard.py  streaming.py  (+6 more)
tests/: __init__.py  test_a2a.py  test_action_contradiction_gate.py  test_anomaly.py  test_async.py  test_attested_admission.py  test_audit.py  test_audit_otel.py  test_azure_compatibility.py  test_badge_version.py  test_blockrate_benchmark.py  test_camouflage_resistant.py  test_capabilities.py  test_cli_doctor.py  test_cli_verify.py  test_config.py  test_conformance_decision_log.py  test_context.py  test_conversation.py  test_core.py  test_core_full.py  test_credential_scope.py  test_deep_analysis_bugs.py  test_done_receipt_guard.py  test_endpoint_policy.py  test_error_hooks.py  test_filesystem.py  test_framework_integration.py  test_framework_integrations_extended.py  test_honeypot.py  test_identity.py  test_india_mobile_pan_gate.py  test_indic_pii_masking.py  test_init_full.py  test_managed_sandbox_backend.py  test_marketplace_metadata.py  test_mcp.py  test_mcp_calc_server_bundle_preset.py  test_mcp_elicitation_provenance_preset.py  test_mcp_full.py  (+51 more)
tests/attest/: test_attest.py  test_cli_contract.py  test_layer_contract.py  test_receipt.py
tests/baseline/: test_baseline.py
tools/: scan_stdio_remote_input_flow.py
(+295 files in other folders)
