[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-airlock"
version = "0.7.0"
description = "The Pydantic-based Firewall for MCP Servers. Stops hallucinated tool calls, validates schemas, and sandboxes dangerous operations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sattyam Jain", email = "sattyamjain@example.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-security",
    "agent-safety",
    "pydantic",
    "e2b",
    "sandbox",
    "llm",
    "validation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "structlog>=24.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
sandbox = [
    "e2b>=1.0,<2.0",
    "cloudpickle>=3.0",
]
mcp = [
    "mcp>=1.0",
    "fastmcp>=2.0,<3.0",
]
# Claude Agent SDK (renamed from Claude Code SDK in Sept 2025).
# Install with: pip install "agent-airlock[claude-agent]"
# See: https://pypi.org/project/claude-agent-sdk/
claude-agent = [
    "claude-agent-sdk>=0.1.58",
]
# Google Cloud Model Armor — opt-in prompt/response classifier.
# Install with: pip install "agent-airlock[model-armor]"
# See: https://pypi.org/project/google-cloud-modelarmor/
model-armor = [
    "google-cloud-modelarmor>=0.2",
]
# Textual TUI for ``airlock console`` (v0.6.0+).
# Install with: pip install "agent-airlock[console]"
# See: https://pypi.org/project/textual/
console = [
    "textual>=0.40",
]
# Redis-backed distributed rate limiter (v0.7.0+, #1).
# Install with: pip install "agent-airlock[redis]"
# fakeredis ships in the same extra so the test suite runs without
# a live Redis. redis-py 5.x is the supported floor.
redis = [
    "redis>=5.0,<7.0",
    "fakeredis>=2.20",
]
# Ed25519 SignedAgentIdentity (v0.7.0+, #33).
# Install with: pip install "agent-airlock[crypto]"
# `cryptography` is the canonical Python ed25519 implementation.
crypto = [
    "cryptography>=42.0",
]
all = [
    "agent-airlock[sandbox,mcp,claude-agent,model-armor,console,redis,crypto]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
    # Security tools
    "bandit>=1.7",
    "safety>=3.0",
    # SBOM generation
    "cyclonedx-bom>=4.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/sattyamjjain/agent-airlock"
Documentation = "https://github.com/sattyamjjain/agent-airlock#readme"
Repository = "https://github.com/sattyamjjain/agent-airlock"
Issues = "https://github.com/sattyamjjain/agent-airlock/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_airlock"]

[tool.ruff]
# requires-python remains ">=3.10"; ruff target stays at py310 so UP036
# (sys.version_info >= (3, 11) blocks for tomllib) and UP042 (StrEnum)
# don't fire — both *would* break py310. CI matrix adds 3.13 separately
# so newer-Python wheels still get coverage.
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested if - often clearer for readability
    "SIM103", # return condition directly - clearer to be explicit
    "B027",   # empty method in ABC - intentional for optional overrides
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Unused function arguments common in test stubs
    "ARG002",  # Unused method arguments common in test stubs
    "ARG005",  # Unused lambda arguments common in mock side_effects
    "SIM117",  # Nested with statements clearer for multiple mocks
]
"src/agent_airlock/integrations/*.py" = [
    "ARG001",  # Guardrail callback signatures require ctx for interface
    "ARG002",  # Callback signatures require unused args for interface compliance
]
"src/agent_airlock/cli/*.py" = [
    "ARG002",  # Consistent interface for check methods
]
"src/agent_airlock/anomaly.py" = [
    "ARG002",  # params reserved for future use in record_call API
]

[tool.ruff.lint.isort]
known-first-party = ["agent_airlock"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "e2b",
    "e2b.*",
    "e2b_code_interpreter",
    "e2b_code_interpreter.*",
    "cloudpickle",
    "cloudpickle.*",
    "fastmcp",
    "fastmcp.*",
    "mcp",
    "mcp.*",
    "tomli",
    "tomli.*",
    "docker",
    "docker.*",
    "opentelemetry",
    "opentelemetry.*",
    "langchain_core",
    "langchain_core.*",
    "jwt",
    "jwt.*",
    "claude_agent_sdk",
    "claude_agent_sdk.*",
    "redis",
    "redis.*",
    "fakeredis",
    "fakeredis.*",
    "cryptography",
    "cryptography.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agent_airlock.integrations.langchain"
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Integration markers must be OPT-IN (``pytest -m docker``). The default
# suite excludes them so CI does not need a Docker daemon.
addopts = "-v --cov=agent_airlock --cov-report=term-missing --ignore=tests/benchmarks -m 'not docker'"
markers = [
    "docker: integration test that requires a running Docker daemon (opt in with `pytest -m docker`)",
]

[tool.coverage.run]
source = ["src/agent_airlock"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 82
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "benchmarks"]
skips = ["B101"]  # Skip assert warnings in production code
